
Bugfixes
~~~~~~~~

- When a client closes a socket unexpectedly there was potential for memory
  leaks in which data was written to the buffers after they were closed,
  causing them to reopen.
  See https://github.com/Pylons/waitress/pull/239

- Fix the queue depth warnings to only show when all threads are busy.
  See https://github.com/Pylons/waitress/pull/243

- Trigger the ``app_iter`` to close as part of shutdown. This will only be
  noticeable for users of the internal server api. In more typical operations
  the server will die before benefiting from these changes.
  See https://github.com/Pylons/waitress/pull/245

1.2.1 (2019-01-25)
------------------

Bugfixes
~~~~~~~~

- When given an IPv6 address in ``X-Forwarded-For`` or ``Forwarded for=``
  waitress was placing the IP address in ``REMOTE_ADDR`` with brackets:
  ``[2001:db8::0]``, this does not match the requirements in the CGI spec which
  ``REMOTE_ADDR`` was lifted from. Waitress will now place the bare IPv6
  address in ``REMOTE_ADDR``: ``2001:db8::0``. See
  https://github.com/Pylons/waitress/pull/232 and
  https://github.com/Pylons/waitress/issues/230

1.2.0 (2019-01-15)
------------------

No changes since the last beta release. Enjoy Waitress!

1.2.0b3 (2019-01-07)
--------------------

Bugfixes
~~~~~~~~

- Modified ``clear_untrusted_proxy_headers`` to be usable without a
  ``trusted_proxy``.
  https://github.com/Pylons/waitress/pull/228

- Modified ``trusted_proxy_count`` to error when used without a
  ``trusted_proxy``.
  https://github.com/Pylons/waitress/pull/228

1.2.0b2 (2019-02-02)
--------------------

Bugfixes
~~~~~~~~

- Fixed logic to no longer warn on writes where the output is required to have
  a body but there may not be any data to be written. Solves issue posted on
  the Pylons Project mailing list with 1.2.0b1.

1.2.0b1 (2018-12-31)
--------------------

Happy New Year!

Features
~~~~~~~~

- Setting the ``trusted_proxy`` setting to ``'*'`` (wildcard) will allow all